Basic homepage changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="The home page for Zarthronius.github.io."> <!-- description of the page-->
+    <link href="style.css" rel="stylesheet"> <!--Uses CSS stylesheet for design-->
+    <!--<script src="     .js"></script> -->
+    <title>Leading Choice Getaways - Home</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<header>
+    <h1><a href="./index.html">Zac Allen Portfolio</a></h1>
+</header>
+<nav>
+    <h2>Pages</h2>
+    <ul>
+        <li><a href="./index.html">Homepage</a></li>
+        <h3>Socials</h3>
+        <li><a href="https://github.com/Zarthronius">Github Profile</a></li>
+    </ul>
+</nav>
+<p></p>
 </body>
 </html>
