--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="The home page for Zarthronius.github.io."> <!-- description of the page-->
     <link href="style.css" rel="stylesheet"> <!--Uses CSS stylesheet for design-->
     <!--<script src="     .js"></script> -->
-    <title>Leading Choice Getaways - Home</title>
+    <title>Zac Allen Portfolio - Home</title>
 </head>
 <body>
 <header>
