Added basic projects and about me pages

--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="The home page for Zarthronius.github.io."> <!-- description of the page-->
+    <meta name="Description" content="The about me page for Zarthronius.github.io."> <!-- description of the page-->
     <link href="style.css" rel="stylesheet"> <!--Uses CSS stylesheet for design-->
     <!--<script src="     .js"></script> -->
-    <title>Zac Allen Portfolio - Home</title>
+    <title>Zac Allen Portfolio - About Me</title>
 </head>
 <body>
 <header>
-    <h1><a href="./index.html">Zac Allen Portfolio</a></h1>
+    <h1><a href="./index.html">Zac Allen </a></h1>
 </header>
 <nav>
     <h2>Pages</h2>
@@ -23,6 +23,18 @@
         <li><a href="https://www.linkedin.com/in/zacallen/">LinkedIn</a></li>
     </ul>
 </nav>
+<h2>About me:</h2>
+<h3>Work I do:</h3>
+<p></p>
+<h3>Roles held:</h3> <!-- Include how long-->
+<p></p>
+<h3>Personal Interests:</h3>
+<p></p>
+<h3>Values:</h3>
+<p></p>
+<h3>Strengths:</h3>
+<p></p>
+<h3>Education:</h3> <!--Include any bootcamps completed-->
 <p></p>
 </body>
 </html>
