--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="The home page for Zarthronius.github.io."> <!-- description of the page-->
     <link href="style.css" rel="stylesheet"> <!--Uses CSS stylesheet for design-->
     <!--<script src="     .js"></script> -->
-    <title>Zac Allen Portfolio - Home</title>
+    <title>Zac Allen Portfolio - Projects</title>
 </head>
 <body>
 <header>
@@ -23,6 +23,7 @@
         <li><a href="https://www.linkedin.com/in/zacallen/">LinkedIn</a></li>
     </ul>
 </nav>
+<h2>Projects:</h2>
 <p></p>
 </body>
 </html>
