--- a/about.html
+++ b/about.html
@@ -36,5 +36,19 @@
 <p></p>
 <h3>Education:</h3> <!--Include any bootcamps completed-->
 <p></p>
+
+<h3>Experience in:</h3>
+<ul>
+    <li>Java</li>
+    <li>MATLAB</li>
+    <li>React</li>
+    <li>HTML</li>
+    <li>JS</li>
+    <li>CSS</li>
+    <li>PHP</li>
+    <li>Python</li>
+    <li>C#</li>
+</ul>
+
 </body>
 </html>
