--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,17 @@
         <li><a href="https://www.linkedin.com/in/zacallen/">LinkedIn</a></li>
     </ul>
 </nav>
-<h2>Projects:</h2>
-<p></p>
+<h2>Latest Projects:</h2>
+
+<h3>Dissertation: Cross Device Interaction between smartphones and VR</h3>
+<h4>Involves: Unity development (C#)</h4>
+<h5><a href="https://github.com/Zarthronius/CrossDeviceVRPrototype">Github repo</a><h5>
+<p>This project involved the development of a cross device application that networks between smartphone and VR HMDs. This was done via the creation of two Unity applications in C#, interfacing with the <a href="https://vr.cs.ucl.ac.uk/ubiq/">Ubiq</a> library.</p>
+
+<h3>Group Project: 3D jewelry mould e-commerce website</h3>
+<h4>Involves: React (JS), STRIPE API Integration</h4>
+<h5><a href="https://github.com/martync96/KV6002-group">Github repo</a><h5></h5>
+<p>This website is a functioning prototype, that allows users to view and purchase 3d printable Jewelry moulds. This website was primarily developed in React. This site features a functioning Strapi database and content management system (CMS), in addition to Stripe payment integration.</p>
+<p>This project was developed with the guidance and feedback of an external client who would ultimately be capable of hosting the website for day to day use.</p>
 </body>
 </html>
