--- a/about.html
+++ b/about.html
@@ -35,6 +35,10 @@
 <h3>Strengths:</h3>
 <p></p>
 <h3>Education:</h3> <!--Include any bootcamps completed-->
+<h4>Undergraduate Degree in Computer Science</h4>
+<h5>First Class Honours</h5>
+<h6>Northumbria University</h6>
+
 <p></p>
 
 <h3>Experience in:</h3>
