Added additional project details

--- a/projects.html
+++ b/projects.html
@@ -35,5 +35,11 @@
 <h5><a href="https://github.com/martync96/KV6002-group">Github repo</a><h5></h5>
 <p>This website is a functioning prototype, that allows users to view and purchase 3d printable Jewelry moulds. This website was primarily developed in React. This site features a functioning Strapi database and content management system (CMS), in addition to Stripe payment integration.</p>
 <p>This project was developed with the guidance and feedback of an external client who would ultimately be capable of hosting the website for day to day use.</p>
+
+<h3>Website: <a href="http://unn-w20016567.newnumyspace.co.uk/Assessment_site/index.php">Leading Choice Getaways</a></h3>
+<h4>Involves: HTML, CSS, PHP, JS<h4>
+<h5><a href="https://github.com/Zarthronius/LeadingChoiceGetaways">Github repo</a></h5>
+<p>This website was designed as part of a University Assignment which makes use of multiple pages and dynamic scaling depending on screen size available.</p>
+
 </body>
 </html>
